# ch32v003-hid-bootloader

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  bootloader.c  check_size.cmake  hid-flasher.py  linker.ld  toolchain-riscv-none-elf.cmake  webhid-flasher.html
.github/workflows/: build.yml  pages.yml
ch32v003-bootloader-docs-main/: CH32V00x Differences.md  README.md
ch32v003-hid/: CMakeLists.txt  README.md  ch32fun.h  funconfig.h  linker.ld  usb_config.h  webhid-flasher.html
rv003usb/: rv003usb.S  rv003usb.c  rv003usb.h
src/: bootloader.c  bootloader.h
